# Computer-Graphics-Final-Project

./: .gitignore  LICENSE  README.md  audio_cli.py  main.py  plan.md  requirements.txt  run.sh  test.py
audio/: audio_handler.py  audio_output.py  midi_manager.py  playback_controller.py
configs/: config.py  logging_config.py
midi/tracks/: Inazuma.mid  hakushin's blessings.mid  lantern rite.mid  moon-in-ones-cup-genshin-impact-ost.mid  moonlike smile.mid  natlan.mid
visuals/: piano_on_wave.py  piano_sink.py  water_engine
visuals/reference/: CMakeLists.txt  gl_helper.cpp  main.cpp  model.cpp  reference.py  skybox.cpp
visuals/shaders/: light.frag  light.vert  skybox.frag  skybox.vert
